# ThetaMind

./: .cursorrules  .env.example  .env.example.bak  .gitignore  CODE_REVIEW_SUMMARY.md  MOCK_DATA_QUICKSTART.md  PRICING_COST_ANALYSIS.md  PROGRESS_REPORT.md  QUICK_FIX_DATABASE.md  README.md  TROUBLESHOOTING.md  cloudbuild.yaml  docker-compose.yml
backend/: .gitignore  BACKEND_STARTUP_FIX.md  BACKEND_STATUS_CHECK.md  DOCKER_BACKEND_FIX.md  Dockerfile  FASTAPI_QUERY_FIX.md  FIXES_APPLIED_SUMMARY.md  MIGRATION_GUIDE.md  QA_AUDIT_REPORT.md  QUICK_FIX.md  README.md  THREE_QUESTIONS_ANALYSIS.md  TIGER_PERMISSION_FIX.md  TROUBLESHOOTING.md  VERIFICATION_RESULTS.md  entrypoint.sh  pyproject.toml  requirements.txt  start_backend.sh  test_ai_report_fixes.py  test_backend_connection.py  test_gemini_http.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_superuser_and_system_configs.py  002_add_stock_symbols.py  003_add_task_execution_history.py  004_add_generated_images_table.py  005_allow_system_tasks_null_user.py  006_add_strategy_hash_to_generated_images.py  (+7 more)
backend/app/: __init__.py  main.py
backend/scripts/: check_symbols.py  run_vertex_behavior_tests.py  save_option_chain_fixture.py  set_superuser.py  sync_liquid_symbols.py  sync_symbols.py  sync_symbols_from_fmp.py  verify_agent_framework.py  verify_fixes.py  verify_option_chain_structure.py  verify_option_chain_structure_mock.py  verify_synced_symbols.py
backend/tests/: README.md  __init__.py  test_ai_functionality.py  test_fixes.py  test_gemini_image.py  test_gemini_vertex_behavior.py  test_mock_api.py
(+343 files in other folders)
